parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> programa
Rule 2     programa -> PROGRAMA ID SEMICOLON var funcion PRINCIPAL L_PARENTHESIS R_PARENTHESIS bloque EOF
Rule 3     var -> VAR var_seen varp
Rule 4     var -> empty
Rule 5     var_seen -> <empty>
Rule 6     varp -> tipo tipo_seen COLON ID variable_seen varppp varpp delete_type SEMICOLON varpppp
Rule 7     tipo_seen -> <empty>
Rule 8     variable_seen -> <empty>
Rule 9     variable_seen -> error error
Rule 10    delete_type -> <empty>
Rule 11    varpp -> COMMA ID variable_seen varppp varpp
Rule 12    varpp -> empty
Rule 13    varppp -> dimDeclare
Rule 14    varppp -> dimDeclare dimDeclare
Rule 15    varppp -> empty
Rule 16    varpppp -> varp
Rule 17    varpppp -> empty
Rule 18    dimDeclare -> L_SQUARE_BRACKET CTE_INT R_SQUARE_BRACKET
Rule 19    dimDeclare -> L_SQUARE_BRACKET CTE_INT R_SQUARE_BRACKET error error
Rule 20    tipo -> INT
Rule 21    tipo -> FLOAT
Rule 22    tipo -> CHAR
Rule 23    funcion -> FUNCION funcionp
Rule 24    funcion -> empty
Rule 25    funcionp -> tipoRetorno ID L_PARENTHESIS parametro R_PARENTHESIS var bloque funcion
Rule 26    parametro -> tipo ID parametrop
Rule 27    parametro -> empty
Rule 28    parametrop -> COMMA tipo ID parametrop
Rule 29    parametrop -> empty
Rule 30    tipoRetorno -> tipo
Rule 31    tipoRetorno -> VOID
Rule 32    bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET
Rule 33    bloquep -> estatuto bloquep
Rule 34    bloquep -> empty
Rule 35    estatuto -> asignacion
Rule 36    estatuto -> funcionVacia
Rule 37    estatuto -> regresa
Rule 38    estatuto -> lectura
Rule 39    estatuto -> escritura
Rule 40    estatuto -> decision
Rule 41    estatuto -> cicloCondicional
Rule 42    estatuto -> cicloNoCondicional
Rule 43    asignacion -> ID dimId ASSIGN expresion SEMICOLON
Rule 44    dimId -> dim
Rule 45    dimId -> dim dim
Rule 46    dimId -> empty
Rule 47    dim -> L_SQUARE_BRACKET expresion R_SQUARE_BRACKET
Rule 48    expresion -> relacional expresionp
Rule 49    expresion -> NOT relacional expresionp
Rule 50    expresionp -> AND expresion
Rule 51    expresionp -> OR expresion
Rule 52    expresionp -> empty
Rule 53    relacional -> aritmetica relacionalp
Rule 54    relacionalp -> EQUALS relacional
Rule 55    relacionalp -> NOT_EQUAL relacional
Rule 56    relacionalp -> LESS_THAN relacional
Rule 57    relacionalp -> LESS_THAN_EQUAL relacional
Rule 58    relacionalp -> GREATER_THAN relacional
Rule 59    relacionalp -> GREATER_THAN_EQUAL relacional
Rule 60    relacionalp -> empty
Rule 61    aritmetica -> factor aritmeticap
Rule 62    aritmeticap -> SUM aritmetica
Rule 63    aritmeticap -> SUBTRACT aritmetica
Rule 64    aritmeticap -> empty
Rule 65    factor -> matriz factorp
Rule 66    factorp -> MULTIPLY factor
Rule 67    factorp -> DIVIDE factor
Rule 68    factorp -> empty
Rule 69    matriz -> cte matrizp
Rule 70    matrizp -> DETERMINANT
Rule 71    matrizp -> TRANSPOSED
Rule 72    matrizp -> INVERSE
Rule 73    matrizp -> empty
Rule 74    cte -> CTE_INT
Rule 75    cte -> CTE_FLOAT
Rule 76    cte -> CTE_CHAR
Rule 77    cte -> llamadaFuncion
Rule 78    cte -> ID dimId
Rule 79    cte -> L_PARENTHESIS expresion R_PARENTHESIS
Rule 80    llamadaFuncion -> ID L_PARENTHESIS parametro R_PARENTHESIS
Rule 81    funcionVacia -> ID L_PARENTHESIS parametro R_PARENTHESIS SEMICOLON
Rule 82    regresa -> REGRESA L_PARENTHESIS expresion R_PARENTHESIS SEMICOLON
Rule 83    lectura -> LECTURA L_PARENTHESIS lecturap R_PARENTHESIS SEMICOLON
Rule 84    lecturap -> ID dimId lecturapp
Rule 85    lecturapp -> COMMA lecturap
Rule 86    lecturapp -> empty
Rule 87    escritura -> ESCRIBE L_PARENTHESIS escriturap R_PARENTHESIS SEMICOLON
Rule 88    escriturap -> LETRERO escriturapp
Rule 89    escriturap -> expresion escriturapp
Rule 90    escriturapp -> COMMA escriturap
Rule 91    escriturapp -> empty
Rule 92    decision -> SI L_PARENTHESIS expresion R_PARENTHESIS HAZ bloque decisionp
Rule 93    decisionp -> SINO bloque
Rule 94    decisionp -> empty
Rule 95    cicloCondicional -> MIENTRAS L_PARENTHESIS expresion R_PARENTHESIS HAZ bloque
Rule 96    cicloNoCondicional -> DESDE ID dimId ASSIGN expresion HASTA expresion HACER bloque EOF
Rule 97    empty -> <empty>

Terminals, with rules where they appear

AND                  : 50
ASSIGN               : 43 96
CHAR                 : 22
COLON                : 6
COMMA                : 11 28 85 90
CTE_CHAR             : 76
CTE_FLOAT            : 75
CTE_INT              : 18 19 74
DESDE                : 96
DETERMINANT          : 70
DIVIDE               : 67
EOF                  : 2 96
EQUALS               : 54
ESCRIBE              : 87
FLOAT                : 21
FUNCION              : 23
GREATER_THAN         : 58
GREATER_THAN_EQUAL   : 59
HACER                : 96
HASTA                : 96
HAZ                  : 92 95
ID                   : 2 6 11 25 26 28 43 78 80 81 84 96
INT                  : 20
INVERSE              : 72
LECTURA              : 83
LESS_THAN            : 56
LESS_THAN_EQUAL      : 57
LETRERO              : 88
L_CURLY_BRACKET      : 32
L_PARENTHESIS        : 2 25 79 80 81 82 83 87 92 95
L_SQUARE_BRACKET     : 18 19 47
MIENTRAS             : 95
MULTIPLY             : 66
NOT                  : 49
NOT_EQUAL            : 55
OR                   : 51
PRINCIPAL            : 2
PROGRAMA             : 2
REGRESA              : 82
R_CURLY_BRACKET      : 32
R_PARENTHESIS        : 2 25 79 80 81 82 83 87 92 95
R_SQUARE_BRACKET     : 18 19 47
SEMICOLON            : 2 6 43 81 82 83 87
SI                   : 92
SINO                 : 93
SUBTRACT             : 63
SUM                  : 62
TRANSPOSED           : 71
VAR                  : 3
VOID                 : 31
error                : 9 9 19 19

Nonterminals, with rules where they appear

aritmetica           : 53 62 63
aritmeticap          : 61
asignacion           : 35
bloque               : 2 25 92 93 95 96
bloquep              : 32 33
cicloCondicional     : 41
cicloNoCondicional   : 42
cte                  : 69
decision             : 40
decisionp            : 92
delete_type          : 6
dim                  : 44 45 45
dimDeclare           : 13 14 14
dimId                : 43 78 84 96
empty                : 4 12 15 17 24 27 29 34 46 52 60 64 68 73 86 91 94
escritura            : 39
escriturap           : 87 90
escriturapp          : 88 89
estatuto             : 33
expresion            : 43 47 50 51 79 82 89 92 95 96 96
expresionp           : 48 49
factor               : 61 66 67
factorp              : 65
funcion              : 2 25
funcionVacia         : 36
funcionp             : 23
lectura              : 38
lecturap             : 83 85
lecturapp            : 84
llamadaFuncion       : 77
matriz               : 65
matrizp              : 69
parametro            : 25 80 81
parametrop           : 26 28
programa             : 1
regresa              : 37
relacional           : 48 49 54 55 56 57 58 59
relacionalp          : 53
start                : 0
tipo                 : 6 26 28 30
tipoRetorno          : 25
tipo_seen            : 6
var                  : 2 25
var_seen             : 3
variable_seen        : 6 11
varp                 : 3 16
varpp                : 6 11
varppp               : 6 11
varpppp              : 6

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . programa
    (2) programa -> . PROGRAMA ID SEMICOLON var funcion PRINCIPAL L_PARENTHESIS R_PARENTHESIS bloque EOF

    PROGRAMA        shift and go to state 3

    start                          shift and go to state 1
    programa                       shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> programa .

    $end            reduce using rule 1 (start -> programa .)


state 3

    (2) programa -> PROGRAMA . ID SEMICOLON var funcion PRINCIPAL L_PARENTHESIS R_PARENTHESIS bloque EOF

    ID              shift and go to state 4


state 4

    (2) programa -> PROGRAMA ID . SEMICOLON var funcion PRINCIPAL L_PARENTHESIS R_PARENTHESIS bloque EOF

    SEMICOLON       shift and go to state 5


state 5

    (2) programa -> PROGRAMA ID SEMICOLON . var funcion PRINCIPAL L_PARENTHESIS R_PARENTHESIS bloque EOF
    (3) var -> . VAR var_seen varp
    (4) var -> . empty
    (97) empty -> .

    VAR             shift and go to state 7
    FUNCION         reduce using rule 97 (empty -> .)
    PRINCIPAL       reduce using rule 97 (empty -> .)

    var                            shift and go to state 6
    empty                          shift and go to state 8

state 6

    (2) programa -> PROGRAMA ID SEMICOLON var . funcion PRINCIPAL L_PARENTHESIS R_PARENTHESIS bloque EOF
    (23) funcion -> . FUNCION funcionp
    (24) funcion -> . empty
    (97) empty -> .

    FUNCION         shift and go to state 10
    PRINCIPAL       reduce using rule 97 (empty -> .)

    funcion                        shift and go to state 9
    empty                          shift and go to state 11

state 7

    (3) var -> VAR . var_seen varp
    (5) var_seen -> .

    INT             reduce using rule 5 (var_seen -> .)
    FLOAT           reduce using rule 5 (var_seen -> .)
    CHAR            reduce using rule 5 (var_seen -> .)

    var_seen                       shift and go to state 12

state 8

    (4) var -> empty .

    FUNCION         reduce using rule 4 (var -> empty .)
    PRINCIPAL       reduce using rule 4 (var -> empty .)
    L_CURLY_BRACKET reduce using rule 4 (var -> empty .)


state 9

    (2) programa -> PROGRAMA ID SEMICOLON var funcion . PRINCIPAL L_PARENTHESIS R_PARENTHESIS bloque EOF

    PRINCIPAL       shift and go to state 13


state 10

    (23) funcion -> FUNCION . funcionp
    (25) funcionp -> . tipoRetorno ID L_PARENTHESIS parametro R_PARENTHESIS var bloque funcion
    (30) tipoRetorno -> . tipo
    (31) tipoRetorno -> . VOID
    (20) tipo -> . INT
    (21) tipo -> . FLOAT
    (22) tipo -> . CHAR

    VOID            shift and go to state 17
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20

    funcionp                       shift and go to state 14
    tipoRetorno                    shift and go to state 15
    tipo                           shift and go to state 16

state 11

    (24) funcion -> empty .

    PRINCIPAL       reduce using rule 24 (funcion -> empty .)


state 12

    (3) var -> VAR var_seen . varp
    (6) varp -> . tipo tipo_seen COLON ID variable_seen varppp varpp delete_type SEMICOLON varpppp
    (20) tipo -> . INT
    (21) tipo -> . FLOAT
    (22) tipo -> . CHAR

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20

    varp                           shift and go to state 21
    tipo                           shift and go to state 22

state 13

    (2) programa -> PROGRAMA ID SEMICOLON var funcion PRINCIPAL . L_PARENTHESIS R_PARENTHESIS bloque EOF

    L_PARENTHESIS   shift and go to state 23


state 14

    (23) funcion -> FUNCION funcionp .

    PRINCIPAL       reduce using rule 23 (funcion -> FUNCION funcionp .)


state 15

    (25) funcionp -> tipoRetorno . ID L_PARENTHESIS parametro R_PARENTHESIS var bloque funcion

    ID              shift and go to state 24


state 16

    (30) tipoRetorno -> tipo .

    ID              reduce using rule 30 (tipoRetorno -> tipo .)


state 17

    (31) tipoRetorno -> VOID .

    ID              reduce using rule 31 (tipoRetorno -> VOID .)


state 18

    (20) tipo -> INT .

    ID              reduce using rule 20 (tipo -> INT .)
    COLON           reduce using rule 20 (tipo -> INT .)


state 19

    (21) tipo -> FLOAT .

    ID              reduce using rule 21 (tipo -> FLOAT .)
    COLON           reduce using rule 21 (tipo -> FLOAT .)


state 20

    (22) tipo -> CHAR .

    ID              reduce using rule 22 (tipo -> CHAR .)
    COLON           reduce using rule 22 (tipo -> CHAR .)


state 21

    (3) var -> VAR var_seen varp .

    FUNCION         reduce using rule 3 (var -> VAR var_seen varp .)
    PRINCIPAL       reduce using rule 3 (var -> VAR var_seen varp .)
    L_CURLY_BRACKET reduce using rule 3 (var -> VAR var_seen varp .)


state 22

    (6) varp -> tipo . tipo_seen COLON ID variable_seen varppp varpp delete_type SEMICOLON varpppp
    (7) tipo_seen -> .

    COLON           reduce using rule 7 (tipo_seen -> .)

    tipo_seen                      shift and go to state 25

state 23

    (2) programa -> PROGRAMA ID SEMICOLON var funcion PRINCIPAL L_PARENTHESIS . R_PARENTHESIS bloque EOF

    R_PARENTHESIS   shift and go to state 26


state 24

    (25) funcionp -> tipoRetorno ID . L_PARENTHESIS parametro R_PARENTHESIS var bloque funcion

    L_PARENTHESIS   shift and go to state 27


state 25

    (6) varp -> tipo tipo_seen . COLON ID variable_seen varppp varpp delete_type SEMICOLON varpppp

    COLON           shift and go to state 28


state 26

    (2) programa -> PROGRAMA ID SEMICOLON var funcion PRINCIPAL L_PARENTHESIS R_PARENTHESIS . bloque EOF
    (32) bloque -> . L_CURLY_BRACKET bloquep R_CURLY_BRACKET

    L_CURLY_BRACKET shift and go to state 30

    bloque                         shift and go to state 29

state 27

    (25) funcionp -> tipoRetorno ID L_PARENTHESIS . parametro R_PARENTHESIS var bloque funcion
    (26) parametro -> . tipo ID parametrop
    (27) parametro -> . empty
    (20) tipo -> . INT
    (21) tipo -> . FLOAT
    (22) tipo -> . CHAR
    (97) empty -> .

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20
    R_PARENTHESIS   reduce using rule 97 (empty -> .)

    parametro                      shift and go to state 31
    tipo                           shift and go to state 32
    empty                          shift and go to state 33

state 28

    (6) varp -> tipo tipo_seen COLON . ID variable_seen varppp varpp delete_type SEMICOLON varpppp

    ID              shift and go to state 34


state 29

    (2) programa -> PROGRAMA ID SEMICOLON var funcion PRINCIPAL L_PARENTHESIS R_PARENTHESIS bloque . EOF

    EOF             shift and go to state 35


state 30

    (32) bloque -> L_CURLY_BRACKET . bloquep R_CURLY_BRACKET
    (33) bloquep -> . estatuto bloquep
    (34) bloquep -> . empty
    (35) estatuto -> . asignacion
    (36) estatuto -> . funcionVacia
    (37) estatuto -> . regresa
    (38) estatuto -> . lectura
    (39) estatuto -> . escritura
    (40) estatuto -> . decision
    (41) estatuto -> . cicloCondicional
    (42) estatuto -> . cicloNoCondicional
    (97) empty -> .
    (43) asignacion -> . ID dimId ASSIGN expresion SEMICOLON
    (81) funcionVacia -> . ID L_PARENTHESIS parametro R_PARENTHESIS SEMICOLON
    (82) regresa -> . REGRESA L_PARENTHESIS expresion R_PARENTHESIS SEMICOLON
    (83) lectura -> . LECTURA L_PARENTHESIS lecturap R_PARENTHESIS SEMICOLON
    (87) escritura -> . ESCRIBE L_PARENTHESIS escriturap R_PARENTHESIS SEMICOLON
    (92) decision -> . SI L_PARENTHESIS expresion R_PARENTHESIS HAZ bloque decisionp
    (95) cicloCondicional -> . MIENTRAS L_PARENTHESIS expresion R_PARENTHESIS HAZ bloque
    (96) cicloNoCondicional -> . DESDE ID dimId ASSIGN expresion HASTA expresion HACER bloque EOF

    R_CURLY_BRACKET reduce using rule 97 (empty -> .)
    ID              shift and go to state 47
    REGRESA         shift and go to state 48
    LECTURA         shift and go to state 49
    ESCRIBE         shift and go to state 50
    SI              shift and go to state 51
    MIENTRAS        shift and go to state 52
    DESDE           shift and go to state 53

    bloquep                        shift and go to state 36
    estatuto                       shift and go to state 37
    empty                          shift and go to state 38
    asignacion                     shift and go to state 39
    funcionVacia                   shift and go to state 40
    regresa                        shift and go to state 41
    lectura                        shift and go to state 42
    escritura                      shift and go to state 43
    decision                       shift and go to state 44
    cicloCondicional               shift and go to state 45
    cicloNoCondicional             shift and go to state 46

state 31

    (25) funcionp -> tipoRetorno ID L_PARENTHESIS parametro . R_PARENTHESIS var bloque funcion

    R_PARENTHESIS   shift and go to state 54


state 32

    (26) parametro -> tipo . ID parametrop

    ID              shift and go to state 55


state 33

    (27) parametro -> empty .

    R_PARENTHESIS   reduce using rule 27 (parametro -> empty .)


state 34

    (6) varp -> tipo tipo_seen COLON ID . variable_seen varppp varpp delete_type SEMICOLON varpppp
    (8) variable_seen -> .
    (9) variable_seen -> . error error

    L_SQUARE_BRACKET reduce using rule 8 (variable_seen -> .)
    COMMA           reduce using rule 8 (variable_seen -> .)
    SEMICOLON       reduce using rule 8 (variable_seen -> .)
    error           shift and go to state 57

    variable_seen                  shift and go to state 56

state 35

    (2) programa -> PROGRAMA ID SEMICOLON var funcion PRINCIPAL L_PARENTHESIS R_PARENTHESIS bloque EOF .

    $end            reduce using rule 2 (programa -> PROGRAMA ID SEMICOLON var funcion PRINCIPAL L_PARENTHESIS R_PARENTHESIS bloque EOF .)


state 36

    (32) bloque -> L_CURLY_BRACKET bloquep . R_CURLY_BRACKET

    R_CURLY_BRACKET shift and go to state 58


state 37

    (33) bloquep -> estatuto . bloquep
    (33) bloquep -> . estatuto bloquep
    (34) bloquep -> . empty
    (35) estatuto -> . asignacion
    (36) estatuto -> . funcionVacia
    (37) estatuto -> . regresa
    (38) estatuto -> . lectura
    (39) estatuto -> . escritura
    (40) estatuto -> . decision
    (41) estatuto -> . cicloCondicional
    (42) estatuto -> . cicloNoCondicional
    (97) empty -> .
    (43) asignacion -> . ID dimId ASSIGN expresion SEMICOLON
    (81) funcionVacia -> . ID L_PARENTHESIS parametro R_PARENTHESIS SEMICOLON
    (82) regresa -> . REGRESA L_PARENTHESIS expresion R_PARENTHESIS SEMICOLON
    (83) lectura -> . LECTURA L_PARENTHESIS lecturap R_PARENTHESIS SEMICOLON
    (87) escritura -> . ESCRIBE L_PARENTHESIS escriturap R_PARENTHESIS SEMICOLON
    (92) decision -> . SI L_PARENTHESIS expresion R_PARENTHESIS HAZ bloque decisionp
    (95) cicloCondicional -> . MIENTRAS L_PARENTHESIS expresion R_PARENTHESIS HAZ bloque
    (96) cicloNoCondicional -> . DESDE ID dimId ASSIGN expresion HASTA expresion HACER bloque EOF

    R_CURLY_BRACKET reduce using rule 97 (empty -> .)
    ID              shift and go to state 47
    REGRESA         shift and go to state 48
    LECTURA         shift and go to state 49
    ESCRIBE         shift and go to state 50
    SI              shift and go to state 51
    MIENTRAS        shift and go to state 52
    DESDE           shift and go to state 53

    estatuto                       shift and go to state 37
    bloquep                        shift and go to state 59
    empty                          shift and go to state 38
    asignacion                     shift and go to state 39
    funcionVacia                   shift and go to state 40
    regresa                        shift and go to state 41
    lectura                        shift and go to state 42
    escritura                      shift and go to state 43
    decision                       shift and go to state 44
    cicloCondicional               shift and go to state 45
    cicloNoCondicional             shift and go to state 46

state 38

    (34) bloquep -> empty .

    R_CURLY_BRACKET reduce using rule 34 (bloquep -> empty .)


state 39

    (35) estatuto -> asignacion .

    ID              reduce using rule 35 (estatuto -> asignacion .)
    REGRESA         reduce using rule 35 (estatuto -> asignacion .)
    LECTURA         reduce using rule 35 (estatuto -> asignacion .)
    ESCRIBE         reduce using rule 35 (estatuto -> asignacion .)
    SI              reduce using rule 35 (estatuto -> asignacion .)
    MIENTRAS        reduce using rule 35 (estatuto -> asignacion .)
    DESDE           reduce using rule 35 (estatuto -> asignacion .)
    R_CURLY_BRACKET reduce using rule 35 (estatuto -> asignacion .)


state 40

    (36) estatuto -> funcionVacia .

    ID              reduce using rule 36 (estatuto -> funcionVacia .)
    REGRESA         reduce using rule 36 (estatuto -> funcionVacia .)
    LECTURA         reduce using rule 36 (estatuto -> funcionVacia .)
    ESCRIBE         reduce using rule 36 (estatuto -> funcionVacia .)
    SI              reduce using rule 36 (estatuto -> funcionVacia .)
    MIENTRAS        reduce using rule 36 (estatuto -> funcionVacia .)
    DESDE           reduce using rule 36 (estatuto -> funcionVacia .)
    R_CURLY_BRACKET reduce using rule 36 (estatuto -> funcionVacia .)


state 41

    (37) estatuto -> regresa .

    ID              reduce using rule 37 (estatuto -> regresa .)
    REGRESA         reduce using rule 37 (estatuto -> regresa .)
    LECTURA         reduce using rule 37 (estatuto -> regresa .)
    ESCRIBE         reduce using rule 37 (estatuto -> regresa .)
    SI              reduce using rule 37 (estatuto -> regresa .)
    MIENTRAS        reduce using rule 37 (estatuto -> regresa .)
    DESDE           reduce using rule 37 (estatuto -> regresa .)
    R_CURLY_BRACKET reduce using rule 37 (estatuto -> regresa .)


state 42

    (38) estatuto -> lectura .

    ID              reduce using rule 38 (estatuto -> lectura .)
    REGRESA         reduce using rule 38 (estatuto -> lectura .)
    LECTURA         reduce using rule 38 (estatuto -> lectura .)
    ESCRIBE         reduce using rule 38 (estatuto -> lectura .)
    SI              reduce using rule 38 (estatuto -> lectura .)
    MIENTRAS        reduce using rule 38 (estatuto -> lectura .)
    DESDE           reduce using rule 38 (estatuto -> lectura .)
    R_CURLY_BRACKET reduce using rule 38 (estatuto -> lectura .)


state 43

    (39) estatuto -> escritura .

    ID              reduce using rule 39 (estatuto -> escritura .)
    REGRESA         reduce using rule 39 (estatuto -> escritura .)
    LECTURA         reduce using rule 39 (estatuto -> escritura .)
    ESCRIBE         reduce using rule 39 (estatuto -> escritura .)
    SI              reduce using rule 39 (estatuto -> escritura .)
    MIENTRAS        reduce using rule 39 (estatuto -> escritura .)
    DESDE           reduce using rule 39 (estatuto -> escritura .)
    R_CURLY_BRACKET reduce using rule 39 (estatuto -> escritura .)


state 44

    (40) estatuto -> decision .

    ID              reduce using rule 40 (estatuto -> decision .)
    REGRESA         reduce using rule 40 (estatuto -> decision .)
    LECTURA         reduce using rule 40 (estatuto -> decision .)
    ESCRIBE         reduce using rule 40 (estatuto -> decision .)
    SI              reduce using rule 40 (estatuto -> decision .)
    MIENTRAS        reduce using rule 40 (estatuto -> decision .)
    DESDE           reduce using rule 40 (estatuto -> decision .)
    R_CURLY_BRACKET reduce using rule 40 (estatuto -> decision .)


state 45

    (41) estatuto -> cicloCondicional .

    ID              reduce using rule 41 (estatuto -> cicloCondicional .)
    REGRESA         reduce using rule 41 (estatuto -> cicloCondicional .)
    LECTURA         reduce using rule 41 (estatuto -> cicloCondicional .)
    ESCRIBE         reduce using rule 41 (estatuto -> cicloCondicional .)
    SI              reduce using rule 41 (estatuto -> cicloCondicional .)
    MIENTRAS        reduce using rule 41 (estatuto -> cicloCondicional .)
    DESDE           reduce using rule 41 (estatuto -> cicloCondicional .)
    R_CURLY_BRACKET reduce using rule 41 (estatuto -> cicloCondicional .)


state 46

    (42) estatuto -> cicloNoCondicional .

    ID              reduce using rule 42 (estatuto -> cicloNoCondicional .)
    REGRESA         reduce using rule 42 (estatuto -> cicloNoCondicional .)
    LECTURA         reduce using rule 42 (estatuto -> cicloNoCondicional .)
    ESCRIBE         reduce using rule 42 (estatuto -> cicloNoCondicional .)
    SI              reduce using rule 42 (estatuto -> cicloNoCondicional .)
    MIENTRAS        reduce using rule 42 (estatuto -> cicloNoCondicional .)
    DESDE           reduce using rule 42 (estatuto -> cicloNoCondicional .)
    R_CURLY_BRACKET reduce using rule 42 (estatuto -> cicloNoCondicional .)


state 47

    (43) asignacion -> ID . dimId ASSIGN expresion SEMICOLON
    (81) funcionVacia -> ID . L_PARENTHESIS parametro R_PARENTHESIS SEMICOLON
    (44) dimId -> . dim
    (45) dimId -> . dim dim
    (46) dimId -> . empty
    (47) dim -> . L_SQUARE_BRACKET expresion R_SQUARE_BRACKET
    (97) empty -> .

    L_PARENTHESIS   shift and go to state 61
    L_SQUARE_BRACKET shift and go to state 64
    ASSIGN          reduce using rule 97 (empty -> .)

    dimId                          shift and go to state 60
    dim                            shift and go to state 62
    empty                          shift and go to state 63

state 48

    (82) regresa -> REGRESA . L_PARENTHESIS expresion R_PARENTHESIS SEMICOLON

    L_PARENTHESIS   shift and go to state 65


state 49

    (83) lectura -> LECTURA . L_PARENTHESIS lecturap R_PARENTHESIS SEMICOLON

    L_PARENTHESIS   shift and go to state 66


state 50

    (87) escritura -> ESCRIBE . L_PARENTHESIS escriturap R_PARENTHESIS SEMICOLON

    L_PARENTHESIS   shift and go to state 67


state 51

    (92) decision -> SI . L_PARENTHESIS expresion R_PARENTHESIS HAZ bloque decisionp

    L_PARENTHESIS   shift and go to state 68


state 52

    (95) cicloCondicional -> MIENTRAS . L_PARENTHESIS expresion R_PARENTHESIS HAZ bloque

    L_PARENTHESIS   shift and go to state 69


state 53

    (96) cicloNoCondicional -> DESDE . ID dimId ASSIGN expresion HASTA expresion HACER bloque EOF

    ID              shift and go to state 70


state 54

    (25) funcionp -> tipoRetorno ID L_PARENTHESIS parametro R_PARENTHESIS . var bloque funcion
    (3) var -> . VAR var_seen varp
    (4) var -> . empty
    (97) empty -> .

    VAR             shift and go to state 7
    L_CURLY_BRACKET reduce using rule 97 (empty -> .)

    var                            shift and go to state 71
    empty                          shift and go to state 8

state 55

    (26) parametro -> tipo ID . parametrop
    (28) parametrop -> . COMMA tipo ID parametrop
    (29) parametrop -> . empty
    (97) empty -> .

    COMMA           shift and go to state 73
    R_PARENTHESIS   reduce using rule 97 (empty -> .)

    parametrop                     shift and go to state 72
    empty                          shift and go to state 74

state 56

    (6) varp -> tipo tipo_seen COLON ID variable_seen . varppp varpp delete_type SEMICOLON varpppp
    (13) varppp -> . dimDeclare
    (14) varppp -> . dimDeclare dimDeclare
    (15) varppp -> . empty
    (18) dimDeclare -> . L_SQUARE_BRACKET CTE_INT R_SQUARE_BRACKET
    (19) dimDeclare -> . L_SQUARE_BRACKET CTE_INT R_SQUARE_BRACKET error error
    (97) empty -> .

    L_SQUARE_BRACKET shift and go to state 78
    COMMA           reduce using rule 97 (empty -> .)
    SEMICOLON       reduce using rule 97 (empty -> .)

    varppp                         shift and go to state 75
    dimDeclare                     shift and go to state 76
    empty                          shift and go to state 77

state 57

    (9) variable_seen -> error . error

    error           shift and go to state 79


state 58

    (32) bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .

    EOF             reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)
    FUNCION         reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)
    PRINCIPAL       reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)
    SINO            reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)
    ID              reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)
    REGRESA         reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)
    LECTURA         reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)
    ESCRIBE         reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)
    SI              reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)
    MIENTRAS        reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)
    DESDE           reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)
    R_CURLY_BRACKET reduce using rule 32 (bloque -> L_CURLY_BRACKET bloquep R_CURLY_BRACKET .)


state 59

    (33) bloquep -> estatuto bloquep .

    R_CURLY_BRACKET reduce using rule 33 (bloquep -> estatuto bloquep .)


state 60

    (43) asignacion -> ID dimId . ASSIGN expresion SEMICOLON

    ASSIGN          shift and go to state 80


state 61

    (81) funcionVacia -> ID L_PARENTHESIS . parametro R_PARENTHESIS SEMICOLON
    (26) parametro -> . tipo ID parametrop
    (27) parametro -> . empty
    (20) tipo -> . INT
    (21) tipo -> . FLOAT
    (22) tipo -> . CHAR
    (97) empty -> .

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20
    R_PARENTHESIS   reduce using rule 97 (empty -> .)

    parametro                      shift and go to state 81
    tipo                           shift and go to state 32
    empty                          shift and go to state 33

state 62

    (44) dimId -> dim .
    (45) dimId -> dim . dim
    (47) dim -> . L_SQUARE_BRACKET expresion R_SQUARE_BRACKET

    ASSIGN          reduce using rule 44 (dimId -> dim .)
    DETERMINANT     reduce using rule 44 (dimId -> dim .)
    TRANSPOSED      reduce using rule 44 (dimId -> dim .)
    INVERSE         reduce using rule 44 (dimId -> dim .)
    MULTIPLY        reduce using rule 44 (dimId -> dim .)
    DIVIDE          reduce using rule 44 (dimId -> dim .)
    SUM             reduce using rule 44 (dimId -> dim .)
    SUBTRACT        reduce using rule 44 (dimId -> dim .)
    EQUALS          reduce using rule 44 (dimId -> dim .)
    NOT_EQUAL       reduce using rule 44 (dimId -> dim .)
    LESS_THAN       reduce using rule 44 (dimId -> dim .)
    LESS_THAN_EQUAL reduce using rule 44 (dimId -> dim .)
    GREATER_THAN    reduce using rule 44 (dimId -> dim .)
    GREATER_THAN_EQUAL reduce using rule 44 (dimId -> dim .)
    AND             reduce using rule 44 (dimId -> dim .)
    OR              reduce using rule 44 (dimId -> dim .)
    R_SQUARE_BRACKET reduce using rule 44 (dimId -> dim .)
    R_PARENTHESIS   reduce using rule 44 (dimId -> dim .)
    COMMA           reduce using rule 44 (dimId -> dim .)
    SEMICOLON       reduce using rule 44 (dimId -> dim .)
    HASTA           reduce using rule 44 (dimId -> dim .)
    HACER           reduce using rule 44 (dimId -> dim .)
    L_SQUARE_BRACKET shift and go to state 64

    dim                            shift and go to state 82

state 63

    (46) dimId -> empty .
